@@ -38,6 +38,7 @@ if (clang_versions.length == 0) {
 }
 def clang_version = clang_versions[0]
 
+def buildDir = layout.buildDirectory.get()
 def jextract_version = "22"
 def jmods_dir = "$buildDir/jmods"
 def jextract_jmod_file = "$jmods_dir/org.openjdk.jextract.jmod"
@@ -49,6 +50,7 @@ def clang_include_dir = "${llvm_home}/lib/clang/${clang_version}/include"
 checkPath(clang_include_dir)
 def os_lib_dir = Os.isFamily(Os.FAMILY_WINDOWS)? "bin" : "lib"
 def os_script_extension = Os.isFamily(Os.FAMILY_WINDOWS)? ".bat" : ""
+def os_exe_suffix = Os.isFamily(Os.FAMILY_WINDOWS)? ".exe" : "" // needed for some, but not all shells
 def libclang_dir = "${llvm_home}/${os_lib_dir}"
 checkPath(libclang_dir)
 
@@ -58,9 +60,8 @@ repositories {
 
 compileJava {
     options.release = 22
-    options.compilerArgs << "--enable-preview"
     options.fork = true
-    options.forkOptions.executable = "${jdk22_home}/bin/javac"
+    options.forkOptions.executable = "${jdk22_home}/bin/javac${os_exe_suffix}"
 }
 
 jar {
@@ -122,8 +123,8 @@ task createJextractImage(type: Exec) {
     outputs.dir(jextract_app_dir)
 
     def quote_jlink_opts = Os.isFamily(Os.FAMILY_WINDOWS)?
-        '\\"--enable-native-access=org.openjdk.jextract\\" \\"--enable-preview\""' :
-        '"--enable-native-access=org.openjdk.jextract" "--enable-preview"'
+        '\\"--enable-native-access=org.openjdk.jextract\\"' :
+        '"--enable-native-access=org.openjdk.jextract"'
 
     doFirst {
         delete(jextract_app_dir)
@@ -232,7 +233,6 @@ void createJtregTask(String name, String jacocoAgent, String os_lib_dir) {
         args = [
                 "-jdk", "$buildDir/jextract-jdk-test-image",
                 "-nativepath:$buildDir/testlib-install/${os_lib_dir}",
-                "-javaoption:--enable-preview",
                 "-javaoption:--enable-native-access=org.openjdk.jextract,ALL-UNNAMED",
                 "-javacoption:--add-exports=org.openjdk.jextract/org.openjdk.jextract.json.parser=ALL-UNNAMED",
                 "-javaoption:--add-exports=org.openjdk.jextract/org.openjdk.jextract.json.parser=ALL-UNNAMED",
